csrc/tests/codegen_probes/errors/err_exit_out_of_loop.bas
' REJECT: EXIT FOR with no enclosing loop.
' zxbparser p_exit:1960 "Syntax Error: EXIT FOR out of loop".
Exit For
